# suite_install

./: Cargo.toml  README.md  build.rs
.claude/: settings.local.json
src/: github.rs  i18n.rs  logger.rs  main.rs  state.rs
src/install/: certificates.rs  mod.rs  paths.rs  runner.rs  shortcuts.rs
src/screens/: eula.rs  installing.rs  language.rs  mod.rs  program_list.rs
