[package]
name = "suite_install"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "suite_install"
path = "src/main.rs"

[dependencies]
eframe = { version = "0.29", features = ["default"] }
egui = "0.29"
reqwest = { version = "0.12", features = ["blocking", "json", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tokio = { version = "1", features = ["full"] }
dirs = "5"
zip = "2"
open = "5"

[target.'cfg(windows)'.dependencies]
winreg = "0.52"

[profile.release]
opt-level = 3
lto = true
strip = true
